Dont allow negatives

--- a/templates/index.html
+++ b/templates/index.html
@@ -78,27 +78,27 @@
 
         <h2>1st:</h2>
         <label for="star_amount_1">Star Amount:</label>
-        <input type="number" name="star_amount_1" required max="99">
+        <input type="number" name="star_amount_1" required max="99" min="0">
         <label for="coin_amount_1">Coin Amount:</label>
-        <input type="number" name="coin_amount_1" required max="999">
+        <input type="number" name="coin_amount_1" required max="999" min="0">
         
         <h2>2nd:</h2>
         <label for="star_amount_2">Star Amount:</label>
-        <input type="number" name="star_amount_2" required max="99">
+        <input type="number" name="star_amount_2" required max="99" min="0">
         <label for="coin_amount_2">Coin Amount:</label>
-        <input type="number" name="coin_amount_2" required max="999">
+        <input type="number" name="coin_amount_2" required max="999" min="0">
         
         <h2>3rd:</h2>
         <label for="star_amount_3">Star Amount:</label>
-        <input type="number" name="star_amount_3" required max="99">
+        <input type="number" name="star_amount_3" required max="99" min="0">
         <label for="coin_amount_3">Coin Amount:</label>
-        <input type="number" name="coin_amount_3" required max="999">
+        <input type="number" name="coin_amount_3" required max="999" min="0">
         
         <h2>4th:</h2>
         <label for="star_amount_4">Star Amount:</label>
-        <input type="number" name="star_amount_4" required max="99">
+        <input type="number" name="star_amount_4" required max="99" min="0">
         <label for="coin_amount_4">Coin Amount:</label>
-        <input type="number" name="coin_amount_4" required max="999">        
+        <input type="number" name="coin_amount_4" required max="999" min="0">        
 
         <button type="submit">Submit</button>
     </form>
