--- a/templates/index.html
+++ b/templates/index.html
@@ -77,24 +77,124 @@
         </select>
 
         <h2>1st:</h2>
+        <label for="board">Character:</label>
+        <select name="char_1" required>
+            <option value="birdo">Birdo</option>
+            <option value="boo">Boo</option>
+            <option value="bowser">Bowser</option>
+            <option value="bowserjr">Bowser Jr.</option>
+            <option value="daisy">Daisy</option>
+            <option value="donkeykong">Donkey Kong</option>
+            <option value="goomba">Goomba</option>
+            <option value="koopa">Koopa Troopa</option>
+            <option value="luigi">Luigi</option>
+            <option value="mario">Mario</option>
+            <option value="montymole">Monty Mole</option>
+            <option value="ninji">Ninji</option>
+            <option value="pauline">Pauline</option>
+            <option value="peach">Peach</option>
+            <option value="rosalina">Rosalina</option>
+            <option value="shyguy">Shy Guy</option>
+            <option value="spike">Spike</option>
+            <option value="toad">Toad</option>
+            <option value="toadette">Toadette</option>
+            <option value="waluigi">Waluigi</option>
+            <option value="wario">Wario</option>
+            <option value="yoshi">Yoshi</option>
+        </select>
         <label for="star_amount_1">Star Amount:</label>
         <input type="number" name="star_amount_1" required max="99" min="0">
         <label for="coin_amount_1">Coin Amount:</label>
         <input type="number" name="coin_amount_1" required max="999" min="0">
         
         <h2>2nd:</h2>
+        <label for="board">Character:</label>
+        <select name="char_2" required>
+            <option value="birdo">Birdo</option>
+            <option value="boo">Boo</option>
+            <option value="bowser">Bowser</option>
+            <option value="bowserjr">Bowser Jr.</option>
+            <option value="daisy">Daisy</option>
+            <option value="donkeykong">Donkey Kong</option>
+            <option value="goomba">Goomba</option>
+            <option value="koopa">Koopa Troopa</option>
+            <option value="luigi">Luigi</option>
+            <option value="mario">Mario</option>
+            <option value="montymole">Monty Mole</option>
+            <option value="ninji">Ninji</option>
+            <option value="pauline">Pauline</option>
+            <option value="peach">Peach</option>
+            <option value="rosalina">Rosalina</option>
+            <option value="shyguy">Shy Guy</option>
+            <option value="spike">Spike</option>
+            <option value="toad">Toad</option>
+            <option value="toadette">Toadette</option>
+            <option value="waluigi">Waluigi</option>
+            <option value="wario">Wario</option>
+            <option value="yoshi">Yoshi</option>
+        </select>
         <label for="star_amount_2">Star Amount:</label>
         <input type="number" name="star_amount_2" required max="99" min="0">
         <label for="coin_amount_2">Coin Amount:</label>
         <input type="number" name="coin_amount_2" required max="999" min="0">
         
         <h2>3rd:</h2>
+        <label for="board">Character:</label>
+        <select name="char_3" required>
+            <option value="birdo">Birdo</option>
+            <option value="boo">Boo</option>
+            <option value="bowser">Bowser</option>
+            <option value="bowserjr">Bowser Jr.</option>
+            <option value="daisy">Daisy</option>
+            <option value="donkeykong">Donkey Kong</option>
+            <option value="goomba">Goomba</option>
+            <option value="koopa">Koopa Troopa</option>
+            <option value="luigi">Luigi</option>
+            <option value="mario">Mario</option>
+            <option value="montymole">Monty Mole</option>
+            <option value="ninji">Ninji</option>
+            <option value="pauline">Pauline</option>
+            <option value="peach">Peach</option>
+            <option value="rosalina">Rosalina</option>
+            <option value="shyguy">Shy Guy</option>
+            <option value="spike">Spike</option>
+            <option value="toad">Toad</option>
+            <option value="toadette">Toadette</option>
+            <option value="waluigi">Waluigi</option>
+            <option value="wario">Wario</option>
+            <option value="yoshi">Yoshi</option>
+        </select>
         <label for="star_amount_3">Star Amount:</label>
         <input type="number" name="star_amount_3" required max="99" min="0">
         <label for="coin_amount_3">Coin Amount:</label>
         <input type="number" name="coin_amount_3" required max="999" min="0">
         
         <h2>4th:</h2>
+        <label for="board">Character:</label>
+        <select name="char_4" required>
+            <option value="birdo">Birdo</option>
+            <option value="boo">Boo</option>
+            <option value="bowser">Bowser</option>
+            <option value="bowserjr">Bowser Jr.</option>
+            <option value="daisy">Daisy</option>
+            <option value="donkeykong">Donkey Kong</option>
+            <option value="goomba">Goomba</option>
+            <option value="koopa">Koopa Troopa</option>
+            <option value="luigi">Luigi</option>
+            <option value="mario">Mario</option>
+            <option value="montymole">Monty Mole</option>
+            <option value="ninji">Ninji</option>
+            <option value="pauline">Pauline</option>
+            <option value="peach">Peach</option>
+            <option value="rosalina">Rosalina</option>
+            <option value="shyguy">Shy Guy</option>
+            <option value="spike">Spike</option>
+            <option value="toad">Toad</option>
+            <option value="toadette">Toadette</option>
+            <option value="waluigi">Waluigi</option>
+            <option value="wario">Wario</option>
+            <option value="yoshi">Yoshi</option>
+        </select>
         <label for="star_amount_4">Star Amount:</label>
         <input type="number" name="star_amount_4" required max="99" min="0">
         <label for="coin_amount_4">Coin Amount:</label>
